[package]
name = "zeroframe"
version = "0.1.3"
authors = ["Ansho Rei <anshorei@zeroid.bit>"]
edition = "2018"
description = "ZeroFrame library for use in WASM projects"
documentation = "http://localhost:43110/19aDztXdkcR9YAKGoWwB58oCinmWqHwQwe/doc/zerucrypt"
readme = "README.md"
homepage = "http://localhost:43110/19aDztXdkcR9YAKGoWwB58oCinmWqHwQwe"
repository = "http://localhost:43110/19aDztXdkcR9YAKGoWwB58oCinmWqHwQwe"
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
wasm-bindgen = { version = "0.2", features = [ "serde-serialize" ] }
wasm-bindgen-futures = "0.4"
base64 = "0.13"
futures = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
